<resources>
    <string name="app_name">Connect4</string>
    <string name="hello">Your discs are the greens. Enjoy ^^</string>
    <string name="about">About</string>
    <string name="reset">Reset</string>
    <string name="aboutText">Desarrollado por Manuel Reyes :)</string>
    <string name="win">You win :D</string>
    <string name="loose">You loose :(</string>
    <string name="tie">We have a tie</string>
    <string name="badPlay">Not allowed movement</string>
    <string name="sound">Sound</string>
    <string name="start">\nTouch to start</string>
    <string name="menu">\nMain menu</string>
    <string name="bhelp">Help</string>
    <string name="bstatistics">Statistics: users</string>
    <string name="blocal">\nPlay</string>
    <string name="bserverjoin">Join online game</string>
    <string name="bservercreate">Create online game</string>
    <string name="help">\nConnect Four is a two-player connection game in which the players take turns dropping colored discs from the top into a vertically suspended grid. The objective of the game is to connect four of one\'s own discs of the same color next to each other vertically, horizontally, or diagonally before your opponent.\nEnter in the map to share your location!!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="newuser">New user</string>
    <string name="modoinvitado">Guest mode</string>
    <string name="user">User</string>
    <string name="Dificutad">Local mode difficulty</string>
    <string name="Facil">Easy</string>
    <string name="Normal">Normal</string>
    <string name="stats">Statistics</string>
    <string name="preferences">Preferences</string>
    <string name="logoutMenu">Logout</string>
    <string name="emailselect">Select one app</string>
    <string name="emailsug">Contact the developer</string>
    <string name="emailmsg">This game has been developed by Manuel Reyes in the course:\nDevelopment of mobile applications.\n2016 EPS -UAM</string>
    <string name="circulos">Circles</string>
    <string name="anillos">Rings</string>
    <string name="azul">Blue</string>
    <string name="negro">Black</string>
    <string name="magenta">Magenta</string>
    <string name="settingsv">Visual settings</string>
    <string name="tipof">Type of figure</string>
    <string name="colorf">Board color</string>
    <string name="mostrarl">Click to show list</string>
    <string name="settingss">Sound settings</string>
    <string name="musicaf">Background music</string>
    <string name="selectm">Select default mode</string>
    <string name="choose">Choose one</string>
    <string name="nouser">Nonexistent user or wrong password</string>
    <string name="welcome">Welcome</string>
    <string name="inuse">Nick not available</string>
    <string name="created">User created</string>
    <string name="bstatistics2">Statistics: games</string>
    <string name="fecha">Date</string>
    <string name="nick">User name</string>
    <string name="more">More</string>
    <string name="ordenpartidas">Order to show statistics</string>
    <string name="duracion">Duration</string>
    <string name="piezas">Number of disks</string>
    <string name="ganador">Winner</string>
    <string name="getResults1"> has won </string>
    <string name="getResults2">of</string>
    <string name="getResults3">games</string>
    <string name="puntuacion">Share user stats</string>
    <string name="shareWA">Open WhatsApp chat</string>
    <string name="share_using">Share using</string>
    <string name="share1">I won</string>
    <string name="share2">games of the</string>
    <string name="share3">I played in the app connect4</string>
    <string name="demo">Functionality demos</string>
    <string name="connect">Connecting...</string>
    <string name="refresh">Loading server info...</string>
    <string name="hora">Hour</string>
    <string name="rivales">Rivals</string>
    <string name="omode">\nOnline mode</string>
    <string name="offmode">\nOffline mode</string>
    <string name="conexerr">Conexion error, try again</string>
    <string name="onlinepart">Online round</string>
    <string name="gcreated">Game created</string>
    <string name="mover">You have to move in:</string>
    <string name="buscan">New rounds:</string>
    <string name="pendientes">Your turn:</string>
    <string name="contra">Play against:</string>
    <string name="load">Game loaded</string>
    <string name="makemove">Make your move</string>
    <string name="select">Select a round</string>
    <string name="rivalstart">Your rival will start the game</string>
    <string name="done">Movement done</string>
    <string name="shareplay">Can you beat me at Connect4? I challenge you</string>
    <string name="loose2">game(s) against:</string>
    <string name="locerr">Location not available</string>
    <string name="mapnoshare">Your opponent has not shared its location</string>
    <string name="bmap">Map</string>
    <string name="aviso">Is your turn!</string>
</resources>
