<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.uam.eps.dadm.connect4.activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView6"
        android:layout_below="@+id/user"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/user"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:id="@+id/textView7"
        android:layout_alignLeft="@+id/user"
        android:layout_alignStart="@+id/user"
        android:layout_below="@+id/imageView2"/>

    <Button
        android:id="@+id/buttonNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newuser"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_below="@+id/buttonLogIn"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonNoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modoinvitado"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_below="@+id/buttonNewUser"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textOnline"
        android:layout_below="@+id/buttonNoLogin"
        android:layout_centerHorizontal="true" />

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TRAMPA"
        android:id="@+id/trampa"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    -->

</RelativeLayout>
