<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activities.GameActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_weight="1"/>
    <!--textAlignment a partir de API 17, si no no se centra pero no repercute en el funcionamiento-->

    <es.uam.eps.dadm.connect4.views.TableroConecta4View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:id="@+id/tableroConecta4View"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:measureWithLargestChild="false"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <!--
        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset"
            style="?android:attr/buttonBarButtonStyle"/>
        -->

        <Button
            android:id="@+id/buttonSound"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sound"
            style="?android:attr/buttonBarButtonStyle"/>

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center"/>

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/about"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>
